sample-apps/app-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: guestbook-ui
