sample-apps/app-2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ui
  namespace: demo
spec:
  rules:
  - host: guestbook-ui
    http:
      paths:
      - backend:
          serviceName: guestbook-ui
          servicePort: http
        path: /
        pathType: ImplementationSpecific
